--- a/app/project1/webapp/i18n/i18n.properties
+++ b/app/project1/webapp/i18n/i18n.properties
@@ -8,4 +8,4 @@ appTitle=App Title
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
-title=Employee Signup
+title=Department Login
